apigw-ingress-controller-blog/author-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authorservice
spec:
  type: ClusterIP
  selector:
    app: author
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
