apigw-ingress-controller-blog/book-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookservice
spec:
  type: ClusterIP
  selector:
    app: book
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
